Made a new Branch for the GUI-development of the typing race simulator and changed the comments of the gui development code to be more meaningful and precise